--- a/config/crd/patches/cainjection_in_partionbindings.yaml
+++ b/config/crd/patches/cainjection_in_partionbindings.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: partionbindings.consumer.camel.apache.org
+  name: partionbindings.chopper.camel.apache.org
