--- a/config/crd/patches/webhook_in_partionbindings.yaml
+++ b/config/crd/patches/webhook_in_partionbindings.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: partionbindings.consumer.camel.apache.org
+  name: partionbindings.chopper.camel.apache.org
 spec:
   conversion:
     strategy: Webhook
