--- a/config/rbac/partionbinding_editor_role.yaml
+++ b/config/rbac/partionbinding_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: partionbinding-editor-role
 rules:
 - apiGroups:
-  - consumer.camel.apache.org
+  - chopper.camel.apache.org
   resources:
   - partionbindings
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - consumer.camel.apache.org
+  - chopper.camel.apache.org
   resources:
   - partionbindings/status
   verbs:
