--- a/config/rbac/partionbinding_viewer_role.yaml
+++ b/config/rbac/partionbinding_viewer_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: partionbinding-viewer-role
 rules:
 - apiGroups:
-  - consumer.camel.apache.org
+  - chopper.camel.apache.org
   resources:
   - partionbindings
   verbs:
@@ -13,7 +13,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - consumer.camel.apache.org
+  - chopper.camel.apache.org
   resources:
   - partionbindings/status
   verbs:
