--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,7 +7,7 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - consumer.camel.apache.org
+  - chopper.camel.apache.org
   resources:
   - partionbindings
   verbs:
@@ -19,13 +19,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - consumer.camel.apache.org
+  - chopper.camel.apache.org
   resources:
   - partionbindings/finalizers
   verbs:
   - update
 - apiGroups:
-  - consumer.camel.apache.org
+  - chopper.camel.apache.org
   resources:
   - partionbindings/status
   verbs:
